cmake_minimum_required (VERSION 3.15)
project(liquiddsp LANGUAGES CXX)
if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    include_directories (/opt/homebrew/include)
    link_directories (/opt/homebrew/lib)
    find_library (LIQUID libliquid.dylib)
else()
    find_library (LIQUID libliquid.so)
endif()
find_package (pybind11 CONFIG REQUIRED)
pybind11_add_module (liquiddsp src/wrapper.cpp src/resampler_doc.cpp src/agc_docs.cpp)
target_link_libraries (liquiddsp PRIVATE ${LIQUID})
install(TARGETS liquiddsp DESTINATION .)
